--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.4.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-collector": "^1.3.1",
     "gulp-uglify": "^3.0.1"
   }
 }
