--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-rev": "^9.0.0",
     "gulp-rev-collector": "^1.3.1",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "run-sequence": "^2.2.1"
   }
 }
