--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.6.1",
+    "gulp-image": "^4.4.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
