--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pengdragon/taobao#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-uglifycss": "^1.1.0",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
