--- a/package.json
+++ b/package.json
@@ -16,19 +16,14 @@
     "url": "https://github.com/pengdragon/taobao/issues"
   },
   "homepage": "https://github.com/pengdragon/taobao#readme",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-uglifycss": "^1.1.0",
-    "jquery": "^3.3.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.6.1",
-    "gulp-image": "^4.4.1",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-connect": "^5.7.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.4.0",
