更新硬盘首次维护

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "url": "https://github.com/pengdragon/taobao/issues"
   },
   "homepage": "https://github.com/pengdragon/taobao#readme",
-  "dependencies": {},
+  "dependencies": {
+    "gulp": "^4.0.0",
+    "gulp-image": "^4.4.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
-    "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
